# RVC-cpu

./: .gitignore  README.md
docs/cn/: RVC-ORT-Realtime-Data-Flow.md  RVC-Windows-RealTime-Cpp-SDK-DLL.md  RVC-Windows-RealTime-ORT-SDK-DLL.md
infer/modules/onnx/: export.py  export_stream.py
scripts/: bench_content_encoder_fp16_vs_fp32.py  build_rvc_sdk_ort.ps1  onnx_quantize_dynamic.py  package_rvc_cpu_optimized.ps1  package_rvc_realtime_portable.ps1  package_rvc_sdk_ort.ps1  setup_onnxruntime_directml.ps1  setup_rvc_sdk_ort_deps.ps1
sdk/rvc_sdk_ort/: API.md  CMakeLists.txt  README.md
sdk/rvc_sdk_ort/demo/: main.cpp
sdk/rvc_sdk_ort/demo_file/: main.cpp
sdk/rvc_sdk_ort/demo_realtime/: main.cpp
sdk/rvc_sdk_ort/include/: rvc_sdk_ort.h
sdk/rvc_sdk_ort/src/: rvc_engine.cpp  rvc_engine.h  rvc_sdk_ort.cpp
sdk/rvc_sdk_ort/src/dsp/: linear_resampler.cpp  linear_resampler.h  sola.cpp  sola.h
sdk/rvc_sdk_ort/src/f0/: rmvpe_f0.cpp  rmvpe_f0.h  yin_f0.cpp  yin_f0.h
sdk/rvc_sdk_ort/src/post/: gtcrn_post_denoiser.cpp  gtcrn_post_denoiser.h
tools/: download_models.py
